gitops/apps/satisfactory/statefulset.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: satisfactory-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: satisfactory
  template:
    metadata:
      labels:
        app: satisfactory
    spec:
      nodeSelector:
        kubernetes.io/hostname: w-ns3106816
      containers:
        - name: satisfactory-container
          image: wolveix/satisfactory-server:v1.9.9
          imagePullPolicy: Always
          resources:
            requests:
              memory: "4Gi"
              cpu: "2000m"
            limits:
              memory: "8Gi"
              cpu: "4000m"
          volumeMounts:
            - name: satisfactory-data-gamefiles
              mountPath: /config/gamefiles
            - name: satisfactory-data-saves
              mountPath: /config/saved
  volumeClaimTemplates:
    - metadata:
        name: satisfactory-data-gamefiles
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 25Gi
    - metadata:
        name: satisfactory-data-saves
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
