gitops/apps/satisfactory/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: satisfactory-service
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: satisfactory.wittnerlab.com
    external-dns.alpha.kubernetes.io/target: a43b34e6-c752-44d1-99a5-cefa29a1fe53.cfargotunnel.com
spec:
  selector:
    app: satisfactory
  ports:
    - port: 7777
      targetPort: 7777
      protocol: TCP
    - port: 7777
      targetPort: 7777
      protocol: UDP
    - port: 8888
      targetPort: 8888
      protocol: TCP
