gitops/apps/satisfactory/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: satisfactory-ingress
  ingressClassName: nginx
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: satisfactory.wittnerlab.com
    external-dns.alpha.kubernetes.io/target: a43b34e6-c752-44d1-99a5-cefa29a1fe53.cfargotunnel.com
